syntax = "proto3";

package conversation_service;

import "google/protobuf/timestamp.proto";

service ProtoConversationService {
  rpc CreateConversation(CreateConversationRequest) returns (CreateConversationResponse);
}

message CreateConversationRequest {
  string title = 1;
}

message Conversation {
  string id = 1;
  string user_id = 2;
  string title = 3;

  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateConversationResponse {
  Conversation conversation = 1;
}
